--- a/css/style.css
+++ b/css/style.css
@@ -533,3 +533,124 @@ figure:hover {
     top: 22px; 
     left: 60px;
 }
+
+
+#front-img-1 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/RTO_header_img4.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#front-img-1:hover {
+    background-image:url("../images/main_img-1.jpg");
+}
+
+#front-img-2 {
+    margin:2rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/scheduler_header_img-1.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#front-img-2:hover {
+    background-image:url("../images/Scheduler-Home@2x.jpg");
+}
+
+#front-img-3 {
+    margin:2rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/Par-header.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#front-img-3:hover {
+    background-image:url("../images/PAR-Home-3@2x.jpg");
+}
+
+#front-img-4 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/ds.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#front-img-4:hover {
+    background-image:url("../images/DS-Product-pages@2x.jpg");
+}
+
+#more-1 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/more-1.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#more-1:hover {
+    background-image:url("../images/more-1-1.jpg");
+}
+
+#more-2 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/more-2.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#more-2:hover {
+    background-image:url("../images/more-2-1.jpg");
+}
+
+#more-3 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/more-3.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#more-3:hover {
+    background-image:url("../images/more-3-1.jpg");
+}
+
+#more-4 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/more-4.jpg");
+    background-position: center;
+    background-size: cover;
+}
+
+#more-4:hover {
+    background-image:url("../images/more-4-1.jpg");
+}
