--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ figure:hover {
 }
 
 #front-img-2:hover {
-    background-image:url("../images/Scheduler-Home@2x.jpg");
+    background-image:url("../images/Scheduler-Home-2@2x.jpg");
 }
 
 #front-img-3 {
