--- a/css/style.css
+++ b/css/style.css
@@ -586,7 +586,7 @@ figure:hover {
     height:510px;
     cursor: pointer;
     transition: background-image .5s ease-in-out;
-    background-image:url("../images/ds.jpg");
+    background-image:url("../images/ds-front-page.jpg");
     background-position: center;
     background-size: cover;
 }
