--- a/css/style.css
+++ b/css/style.css
@@ -595,6 +595,21 @@ figure:hover {
     background-image:url("../images/ds-front-page-hover.jpg");
 }
 
+#front-img-4 {
+    margin:5rem auto;
+    width:100%;
+    height:510px;
+    cursor: pointer;
+    transition: background-image .5s ease-in-out;
+    background-image:url("../images/dashboard-front-page.png");
+    background-position: center;
+    background-size: cover;
+}
+
+#front-img-4:hover {
+    background-image:url("../images/dashboard-front-page-hover.jpg");
+}
+
 #more-1 {
     margin:5rem auto;
     width:100%;
