--- a/css/style.css
+++ b/css/style.css
@@ -607,7 +607,7 @@ figure:hover {
 }
 
 #front-img-5:hover {
-    background-image:url("../images/dashboard-front-page-hover.jpg");
+    background-image:url("../images/dashboard-front-page-hover.png");
 }
 
 #more-1 {
